--- a/config.json
+++ b/config.json
@@ -1,9 +1,9 @@
 {
-	"seed": "seed2",
-	"use_all_scanner_entries": true,
-	"use_all_analysis_entries": true,
-	"use_all_goal_entries": true,
-	"randomize_starting_blueprints": true,
+	"seed": "",
+	"use_all_scanner_entries": false,
+	"use_all_analysis_entries": false,
+	"use_all_goal_entries": false,
+	"randomize_starting_blueprints": false,
 	"use_progression": false,
 	"allow_softlocks": false
 }
